--- a/about/index.html
+++ b/about/index.html
@@ -192,23 +192,21 @@
 <h2 id="ai带来巨大的变革">AI带来巨大的变革</h2>
 <p>近年来，人工智能技术的迅速发展，令人惊叹。从图像识别到语音识别，再到自然语言处理等多个领域，人工智能技术的应用范围越来越广泛。这些技术所带来的便利和效率提升，不仅是个人，更为整个社会带来了革命性的变化。</p>
 <br>
-<h2 id="关于aibard123">关于AiBard123</h2>
-<p>然而，随着越来越多的AI工具涌现，如何快速找到满足自己需求的工具成为了一个重要问题。为了解决这个问题，我们开发了一个名为AiBard123的AI工具导航，旨在提供一个快速而准确的AI工具搜索平台。</p>
-<p>作为一款全新的工具，AiBard123汇集了目前主流的AI工具，包括<strong>机器学习、自然语言处理、计算机视觉、语音识别、语音生成</strong>等，覆盖了绝大多数的AI工具类别。</p>
-<p>无论是初学者还是专业人士，只需要输入关键词，就能在AiBard123中找到最适合自己的AI工具，而且搜索速度快，准确度高。</p>
-<p>除了工具搜索，AiBard123还汇集了<strong>大量的AI工具使用案例和教程</strong>，方便用户进一步了解和学习这些先进技术，并提供问答社区，让用户能够交流学习经验、分享心得，形成一个良好的互动氛围。</p>
+<h2 id="关于ai导航">关于Ai导航</h2>
+<p>然而，随着越来越多的AI工具涌现，如何快速找到满足自己需求的工具成为了一个重要问题。为了解决这个问题，我们开发了一个名为Ai导航的AI工具导航，旨在提供一个快速而准确的AI工具搜索平台。</p>
+<p>作为一款全新的工具，Ai导航汇集了目前主流的AI工具，包括<strong>机器学习、自然语言处理、计算机视觉、语音识别、语音生成</strong>等，覆盖了绝大多数的AI工具类别。</p>
+<p>无论是初学者还是专业人士，只需要输入关键词，就能在Ai导航中找到最适合自己的AI工具，而且搜索速度快，准确度高。</p>
+<p>除了工具搜索，Ai导航还汇集了<strong>大量的AI工具使用案例和教程</strong>，方便用户进一步了解和学习这些先进技术，并提供问答社区，让用户能够交流学习经验、分享心得，形成一个良好的互动氛围。</p>
 <br>
 <h2 id="联系我们">联系我们</h2>
-<p>欢迎来到 AiBard123.com 如果你热爱科技，喜欢分享，那就不要错过这个平台。</p>
-<p>本项目开源，欢迎投稿。</p>
+<p>欢迎来到 daohang.vip666.uk 如果你喜欢便捷，喜欢分享，那就不要错过这个平台。</p>
 <p>联系方式：</p>
-<p><strong>QQ:</strong> 1752338621</p>
 <br>
-<p><strong>Gmail:</strong> <a href="mailto:aibard123.com@gmail.com">aibard123.com@gmail.com</a></p>
+<p><strong>mail:</strong> <a href="mailto:admin@vip666.uk">admin@vip666.uk</a></p>
 <br>
-<p>也可关注公众号：每天AI新工具</p>
+<p>也可关注公众号：路漫修远兮</p>
 <p><img src="/images/aitools/2024/03/qrcode_for_gh_dde1b429630d_258.jpg" alt=""></p>
-<p style="font-weight: bold;">广告：私人定制视频文本提取，字幕翻译制作等，欢迎联系QQ:1752338621</p>
+<p style="font-weight: bold;">广告：私人电子书下载服务，欢迎联系ebook@vip666.uk</p>
 </article>
         </div>
     </div>
@@ -237,7 +235,7 @@
                 
             </div>
             <div class="footer-inner">
-                <div class="footer-text">本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：aibard123.com@gmail.com <br/>© 2022 - 2025 By <a href="https://github.com/shenweiyan/WebStack-Hugo">WebStack-Hugo</a> | <a href="https://www.aibard123.com/">AIBard123 Ai工具导航</a>)<br/></div>
+                <div class="footer-text">本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：admin@vip666.uk <br/>© 2024 - 2025 By <a href="https://github.com/shenweiyan/WebStack-Hugo">WebStack-Hugo</a> | <a href="https://daohang.vip666.uk/">Ai工具导航</a>)<br/></div>
             </div>
         </footer>
     </div>
