--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
                     <a href="" class="navbar-brand d-md-none" title=“ai工具网址导航,ai最新产品">
                         <img src="/assets/images/bt.png" class="logo-light"
-                            alt="工具网址导航,ai最新产品">
+                            alt="ai工具网址导航,ai最新产品">
                         <img src="/assets/images/bt.png" class="logo-dark d-none"
                             alt="ai工具网址导航,ai最新产品">
                     </a>
@@ -351,7 +351,7 @@
 
 <div class="header-big  post-top css-color mb-4" id="search-bg" style="">
     <div style="font-size:12px">          
-        <h1 style="font-size:18px;text-align: center;">AiBard123 AI导航</h1>        
+        <h1 style="font-size:18px;text-align: center;">AI导航</h1>        
     </div>
     <div class="s-search">
         <div id="search" class="s-search mx-auto">
