--- a/about/index.html
+++ b/about/index.html
@@ -205,7 +205,7 @@
 <p><strong>mail:</strong> <a href="mailto:admin@vip666.uk">admin@vip666.uk</a></p>
 <br>
 <p>也可关注公众号：路漫修远兮</p>
-<p><img src="/images/aitools/2024/03/qrcode_for_gh_dde1b429630d_258.jpg" alt=""></p>
+<p><img src="/images/wxgzh.jpg" alt=""></p>
 <p style="font-weight: bold;">广告：私人电子书下载服务，欢迎联系ebook@vip666.uk</p>
 </article>
         </div>
